Showing statuses and update times and Canceling Job capability added VANG-5